# Symbolic

./: .gitignore  CMakeLists.txt  README.md  Untitled.ipynb  build.sh  debug.sh  run.sh  test.sh  test.sym
share/jupyter/kernels/symbolic/: kernel.json.in
src/: Expr.cpp  Expr.hpp  FuzzyBool.hpp  Type.cpp  Type.hpp  actions.cpp  actions.hpp  arithmetic.cpp  commands.cpp  error.hpp  expr_from_string.cpp  expr_strings.cpp  expr_to_from_string.cpp  main.cpp  main.hpp  refcount.hpp  tests.hpp
tests/: arithmetic.cpp  expr_parse.cpp
